kubernetes/mariadb-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.6
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db-init
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: db-init
          configMap:
            name: grocy-db-init
