kubernetes/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocy-database-service
spec:
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
