kubernetes/web-LoadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocery-web-service
spec:
  type: LoadBalancer
  selector:
    app: grocery-web
  ports:
    - port: 80
      targetPort: 80
